Added build and deploy webhook

--- a/blog/deno.json
+++ b/blog/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
+    "build": "deno run -A dev.ts build",
     "start": "deno run -A --watch=static/,routes/ dev.ts",
     "docker": "docker compose build && docker compose up",
     "docker:clear": "docker compose rm --force && docker compose down && docker volume rm blog_db_data",
