--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,16 @@ on:
     branches: main
   pull_request:
     branches: main
+  workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    
+    concurrency:
+      group: staging_environment
+      cancel-in-progress: true
 
     permissions:
       id-token: write # Needed for auth with Deno Deploy
