--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: ci
-# on:
+on:
+  workflow_dispatch: # Allows manual triggering of the workflow
 #   push:
 #     branches: [main]
 #   pull_request:
