--- a/blog/deno.json
+++ b/blog/deno.json
@@ -1,7 +1,8 @@
 {
   "tasks": {
-    "build": "deno run -A dev.ts build",
     "start": "deno run build; deno run -A --watch=static/,routes/ dev.ts",
+    "build": "deno run -A dev.ts build",
+    "build-css": "sass ./static/styles.scss ./static/styles.gen.css",
     "docker": "docker compose build && docker compose up",
     "docker:clear": "docker compose rm --force && docker compose down && docker volume rm blog_db_data",
     "docker:reset": "deno task docker:clear || true && deno task docker"
