--- a/wp-nextjs/deno.json
+++ b/wp-nextjs/deno.json
@@ -1,5 +1,15 @@
 {
     "unstable": [
-        "unsafe-proto"
-    ]
+      "unsafe-proto",
+      "sloppy-imports"
+    ],
+    "compilerOptions": {
+      "lib": [
+        "dom",
+        "dom.iterable",
+        "esnext"
+      ],
+      "strict": true,
+      "jsx": "preserve"
+    }
 }
