--- a/wp-nextjs/package.json
+++ b/wp-nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headstartwp/core": "^1.4.4",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -19,10 +20,11 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
+    "@wordpress/block-serialization-default-parser": "^5.25.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "^15.3.3",
+    "next": "^15.4.0-canary.85",
     "next-themes": "^0.4.6",
     "query-string": "^9.2.1",
     "react": "19.1.0",
