--- a/wp-nextjs/deno.json
+++ b/wp-nextjs/deno.json
@@ -1,15 +1,56 @@
 {
-    "unstable": [
-      "unsafe-proto",
-      "sloppy-imports"
+  "unstable": [
+    "unsafe-proto",
+    "sloppy-imports"
+  ],
+  "compilerOptions": {
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext",
+      "dom.asynciterable",
+      "webworker",
+      "webworker.importscripts"
     ],
-    "compilerOptions": {
-      "lib": [
-        "dom",
-        "dom.iterable",
-        "esnext"
+    "strict": true,
+    "jsx": "preserve"
+  },
+  "imports": {
+    "@/": "./"
+  },
+  "fmt": {
+    "include": [
+      "app/",
+      "components/",
+      "lib/"
+    ],
+    "exclude": [  ],
+    "lineWidth": 80,
+    "indentWidth": 2,
+    "singleQuote": true,
+    "semiColons": true
+  },
+  "lint": {
+    "include": [
+      "app/",
+      "components/",
+      "lib/"
+    ],
+    "rules": {
+      "tags": [
+        "recommended"
       ],
-      "strict": true,
-      "jsx": "preserve"
+      "include": [
+        "ban-untagged-todo"
+      ],
+      "exclude": [
+        "no-undef",
+        "no-sloppy-imports",
+        "require-await",
+        "no-explicit-any",
+        "no-node-globals",
+        "no-process-global"
+      ]
     }
+  }
 }
