--- a/wp-nextjs/package.json
+++ b/wp-nextjs/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "next build && npm run obfuscate-css",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "obfuscate-css": "next-css-obfuscator"
   },
   "dependencies": {
     "@headstartwp/core": "^1.4.4",
@@ -19,8 +20,9 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
-    "@wordpress/block-serialization-default-parser": "^5.25.0",
+    "@wordpress/block-serialization-default-parser": "^5.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.517.0",
@@ -37,15 +39,15 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.4",
+    "next-css-obfuscator": "^3.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
 }
