--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,11 @@ on:
     branches: wp-nextjs
   pull_request:
     branches: wp-nextjs
+env:
+  WORDPRESS_URL: ${{ vars.WORDPRESS_URL }}
+  WORDPRESS_HOSTNAME: ${{ vars.WORDPRESS_HOSTNAME }}
+  WORDPRESS_WEBHOOK_SECRET: ${{ vars.WORDPRESS_WEBHOOK_SECRET }}
+  WORDPRESS_API_BASIC_AUTH: ${{ vars.WORDPRESS_API_BASIC_AUTH }}
 
 jobs:
   deploy:
@@ -29,16 +34,14 @@ jobs:
           node-version: lts/*
 
       - name: Install step
-        run: "npm install"
+        run: 'npm install'
 
       - name: Build step
-        run: "npm run build && (cp -r public .next/standalone/public; cp -r .next/static .next/standalone/.next/static; mv .next/standalone/server.js .next/standalone/server.cjs)"
+        run: 'npm run build && (cp -r public .next/standalone/public; cp -r .next/static .next/standalone/.next/static; mv .next/standalone/server.js .next/standalone/server.cjs)'
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "wp-next"
-          entrypoint: "./server.cjs"
-          root: ".next/standalone"
-          
-          
+          project: 'wp-next'
+          entrypoint: './server.cjs'
+          root: '.next/standalone'
