--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 name: Deploy
 on:
+  workflow_dispatch: # Allows manual triggering of the workflow
   push:
     branches: wp-nextjs
   pull_request:
