--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
