--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: 1arp/create-a-file-action@0.4.5
         with:
-          path: '.'
+          path: '.next/standalone/'
           isAbsolutePath: false
           file: '.env'
           content: |
