--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "next": "^15.3.4",
     "next-themes": "^0.4.6",
     "query-string": "^9.2.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.58.1",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^3.3.1",
