--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,29 @@ jobs:
           WORDPRESS_HOSTNAME: ${{ vars.WORDPRESS_HOSTNAME }}
           WORDPRESS_WEBHOOK_SECRET: ${{ vars.WORDPRESS_WEBHOOK_SECRET }}
           WORDPRESS_API_BASIC_AUTH: ${{ vars.WORDPRESS_API_BASIC_AUTH }}
-    
 
+      - uses: 1arp/create-a-file-action@0.4.5
+        with:
+          path: '.next/standalone'
+          isAbsolutePath: false
+          file: '.env'
+          content: |
+            WORDPRESS_URL: ${{ vars.WORDPRESS_URL }}
+            WORDPRESS_HOSTNAME: ${{ vars.WORDPRESS_HOSTNAME }}
+            WORDPRESS_WEBHOOK_SECRET: ${{ vars.WORDPRESS_WEBHOOK_SECRET }}
+            WORDPRESS_API_BASIC_AUTH: ${{ vars.WORDPRESS_API_BASIC_AUTH }}
+  
+      - uses: 1arp/create-a-file-action@0.4.5
+        with:
+          path: '.next/standalone'
+          isAbsolutePath: false
+          file: '.env.local'
+          content: |
+            WORDPRESS_URL: ${{ vars.WORDPRESS_URL }}
+            WORDPRESS_HOSTNAME: ${{ vars.WORDPRESS_HOSTNAME }}
+            WORDPRESS_WEBHOOK_SECRET: ${{ vars.WORDPRESS_WEBHOOK_SECRET }}
+            WORDPRESS_API_BASIC_AUTH: ${{ vars.WORDPRESS_API_BASIC_AUTH }}
+  
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
